--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 <script>
 var ax;
 var axHigh = 0;
-
-var rx;
 function setup() {
   createCanvas(window.innerWidth,window.innerHeight)
 }
 function draw(){
   ax = accelerationX;
-  if (ax > axHigh) {
+  if (ax < axHigh) {
     axHigh = ax;
-    document.getElementById("ax").innerHTML = "X Accel = " + axHigh;
   }
-  rx = rotationX;
-  document.getElementById("rx").innerHTML = "X rotation " + rx;
+  document.getElementById("ax").innerHTML = "X Accel = " + axHigh;
 }
 </script>
 </body>
-</html>
+</html> 
